# engine-rs

./: .committed.toml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .typos.toml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  clippy.toml  deny.toml  dprint.json  rustfmt.toml  skills-lock.json
.agents/skills/ask-questions-if-underspecified/: SKILL.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/cargo-fuzz/: SKILL.md
.agents/skills/clean-code/: SKILL.md
.agents/skills/rust-best-practices/: SKILL.md
.agents/skills/rust-best-practices/references/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md
.agents/skills/rust-engineer/: SKILL.md
.agents/skills/rust-review/: SKILL.md
.agents/skills/rust-security/: SKILL.md
.agents/skills/rust-testing/: SKILL.md
.agents/skills/supply-chain-risk-auditor/: SKILL.md
.agents/skills/supply-chain-risk-auditor/resources/: results-template.md
.agents/skills/testing-patterns/: SKILL.md
.cargo/: config.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
.supply-chain-risk-auditor/: results.md
crates/piccle/: Cargo.toml
crates/piccle-core/: Cargo.toml
crates/piccle-core/src/: curve.rs  error.rs  lib.rs  model.rs  schedule.rs
crates/piccle-dsp/: Cargo.toml
crates/piccle-dsp/benches/: reverb_prepare.rs
crates/piccle-dsp/src/: denormal.rs  echo.rs  filter.rs  lib.rs  measure.rs  noise.rs  oscillator.rs  reverb.rs
crates/piccle-dsp/tests/: reverb_matrix_vector.rs  reverb_reference_irs.rs
crates/piccle-fuzz/: Cargo.toml
crates/piccle-fuzz/fuzz_targets/: fuzz_parser.rs
crates/piccle-fuzz/src/: lib.rs
crates/piccle-render/: Cargo.toml
crates/piccle-render/benches/: render.rs
crates/piccle-render/src/: lib.rs  plan.rs  renderer.rs
crates/piccle-render/tests/: no_alloc.rs  render.rs
crates/piccle-validate/: Cargo.toml
crates/piccle-validate/src/: json.rs  lib.rs  resolve.rs  schema.rs  semantic.rs
crates/piccle-validate/tests/: conformance.rs  edge_cases.rs  json_parser.rs  snapshots.rs
crates/piccle-validate/tests/snapshots/: snapshots__balance-out-of-range.snap  snapshots__bloom.snap  snapshots__button-click.snap  snapshots__droplet.snap  snapshots__duplicate-layer-id.snap  snapshots__duplicate-member.snap  snapshots__echo.snap  snapshots__empty-description.snap  snapshots__empty-name.snap  snapshots__error.snap  snapshots__fade-in-additional-property.snap  snapshots__fade-in-as-integer.snap  snapshots__fade-in-missing-ms.snap  snapshots__fade-in-unknown-curve.snap  snapshots__filter-frequencies-entry-missing-hz.snap  snapshots__filter-missing-frequencies.snap  snapshots__filter-timing-exceeds-duration.snap  snapshots__frequency-out-of-range.snap  snapshots__layer-duration-zero.snap  snapshots__layer-end-out-of-range.snap  snapshots__layer-missing-duration.snap  snapshots__loading.snap  snapshots__missing-character.snap  snapshots__missing-piccle.snap  snapshots__missing-wave.snap  snapshots__negative-fade.snap  snapshots__negative-hold.snap  snapshots__negative-start.snap  snapshots__negative-transition.snap  snapshots__nested-unknown-property.snap  snapshots__noise-source-with-pitch-field.snap  snapshots__non-finite-number.snap  snapshots__notification.snap  snapshots__number-out-of-range.snap  snapshots__offset-cents-out-of-range.snap  snapshots__output-end-out-of-range.snap  snapshots__page.snap  snapshots__pitch-frequencies-entry-missing-hz.snap  snapshots__pitch-timing-exceeds-duration.snap  snapshots__ready.snap  (+41 more)
crates/piccle/src/: lib.rs
crates/piccle/tests/: behavior_render_cases.rs  examples.rs  prepare.rs  property.proptest-regressions  property.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: conformance.rs  main.rs
