[package]
name = "piccle-core"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/piccle-core"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Core document model, errors, and curve primitives for the Piccle engine."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
