[package]
name = "piccle-dsp"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/piccle-dsp"
edition = { workspace = true }
exclude = ["/tests"]
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "DSP primitives for Piccle: deterministic noise, oscillators, filters, FDN reverb, and echo."

[lints]
workspace = true

[dependencies]
piccle-core = { workspace = true }

[[bench]]
name = "reverb_prepare"
harness = false

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
