# cargo-fuzz crate for the Piccle engine.
#
# Detached from the root workspace (empty [workspace] table below) so that
# libfuzzer-sys never builds during normal workspace builds. See AGENTS.md
# §10.3: feed arbitrary bytes to `piccle_validate::Validator::check(bytes)` and
# assert it returns Ok or Err — never panics, never hangs, never allocates
# unbounded memory.
#
# Run with: cargo +nightly fuzz run fuzz_parser

[package]
name = "piccle-fuzz"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.85"
description = "Fuzz targets for the Piccle engine. Run with cargo fuzz."

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
piccle-validate = { path = "../piccle-validate" }

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[workspace]
