[package]
name = "piccle-render"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Boundary schedule, render plan, and production render loop for the Piccle engine."

[lints]
workspace = true

[dependencies]
piccle-core = { workspace = true }
piccle-dsp = { workspace = true }

[dev-dependencies]
cargo-husky = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
