[package]
name = "piccle-render"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/piccle-render"
edition = { workspace = true }
exclude = ["/tests"]
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Boundary schedule, render plan, and production render loop for the Piccle engine."

[lints]
workspace = true

[dependencies]
piccle-core = { workspace = true }
piccle-dsp = { workspace = true }

[[bench]]
name = "render"
harness = false

[dev-dependencies]
alloc_counter = "0.0.4"
criterion = { workspace = true }
