[package]
name = "piccle-validate"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "JSON parsing, schema validation, and semantic validation for the Piccle engine."

[lints]
workspace = true

[dependencies]
jsonschema = { workspace = true }
once_cell = { workspace = true }
piccle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cargo-husky = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
