[package]
name = "piccle-validate"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/piccle-validate"
edition = { workspace = true }
exclude = ["/tests"]
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "JSON parsing, schema validation, and semantic validation for the Piccle engine."

[lints]
workspace = true

[dependencies]
piccle-core = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
